force-app/main/default/objects/Caja__c/Caja__c.object-meta.xml
<CustomObject>
    <label>Caja</label>
    <nameField>
        <label>Nombre de Caja</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cajas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>