force-app/main/default/objects/Caja__c/fields/Banco__c.field-meta.xml
<CustomField>
    <fullName>Banco__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Banco</label>
    <referenceTo>Banco__c</referenceTo>
    <relationshipLabel>Cajas</relationshipLabel>
    <relationshipName>Cajas</relationshipName>
    <type>Lookup</type>
</CustomField>