force-app/main/default/objects/Caja__c/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <label>Saldo</label>
    <summarizedField>Movimiento_de_caja__c.Importe__c</summarizedField>
    <summaryFilterItems>
        <field>Movimiento_de_caja__c.Estado__c</field>
        <operation>equals</operation>
        <value>Impactado</value>
    </summaryFilterItems>
    <summaryForeignKey>Movimiento_de_caja__c.Caja__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>